# embeder

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  flake.nix  fly.toml  pyproject.toml
dev-scripts/: deploy.sh
embeder/: client.py  config.py  server.py  utils.py
nix/: module.nix
